--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,12 @@ dependencies:
   flutter:
     sdk: flutter
   firebase_core: ^3.9.0
+  bloc: ^8.1.4
+  flutter_bloc: ^8.1.6
+  equatable: ^2.0.7
+  firebase_remote_config: ^5.2.0
+  firebase_analytics: ^11.3.6
+ 
 
 dev_dependencies:
   flutter_test:
