--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   equatable: ^2.0.7
   firebase_remote_config: ^5.2.0
   firebase_analytics: ^11.3.6
+  go_router: ^14.6.2
  
 
 dev_dependencies:
