--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,12 +16,16 @@ dependencies:
   firebase_remote_config: ^5.2.0
   firebase_analytics: ^11.3.6
   go_router: ^14.6.2
- 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  flutter_native_splash: ^2.4.4
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/
+
+
