--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   go_router: ^14.6.2
   flutter_native_splash: ^2.4.4
   intl: ^0.20.1
+  logging: ^1.3.0
 
 dev_dependencies:
   flutter_test:
