--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   flutter_native_splash: ^2.4.4
   intl: ^0.20.1
   logging: ^1.3.0
+  flutter_launcher_icons: ^0.14.2
 
 dev_dependencies:
   flutter_test:
