App name change

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- Change android:label to update displayed app name-->
     <application
-        android:label="playground_flutter"
+        android:label="Playground"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
         <activity
