--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,14 +12,15 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   firebase_core: ^3.10.0
-  bloc: ^8.1.4
-  flutter_bloc: ^8.1.6
+  bloc: ^9.0.0
+  flutter_bloc: ^9.0.0
   equatable: ^2.0.7
   firebase_remote_config: ^5.3.0
   firebase_analytics: ^11.4.0
   go_router: ^14.6.3
   logging: ^1.3.0
   flutter_launcher_icons: ^0.14.2
+  get_it: ^8.0.3
 
 dev_dependencies:
   flutter_test:
