--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,15 +12,19 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   firebase_core: ^3.10.0
+  firebase_remote_config: ^5.3.0
+  firebase_analytics: ^11.4.0
   bloc: ^9.0.0
   flutter_bloc: ^9.0.0
   equatable: ^2.0.7
-  firebase_remote_config: ^5.3.0
-  firebase_analytics: ^11.4.0
   go_router: ^14.6.3
   logging: ^1.3.0
   flutter_launcher_icons: ^0.14.2
   get_it: ^8.0.3
+  sembast: ^3.8.1+1
+  sembast_web: ^2.4.0+4
+  path_provider: ^2.1.5
+  path: ^1.9.0
 
 dev_dependencies:
   flutter_test:
