--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,12 +19,12 @@ dependencies:
   equatable: ^2.0.7
   go_router: ^14.6.3
   logging: ^1.3.0
-  flutter_launcher_icons: ^0.14.2
+  flutter_launcher_icons: ^0.14.3
   get_it: ^8.0.3
   sembast: ^3.8.1+1
-  sembast_web: ^2.4.0+4
   path_provider: ^2.1.5
   path: ^1.9.0
+  encrypt: ^5.0.3
 
 dev_dependencies:
   flutter_test:
