--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,11 +17,11 @@ dependencies:
   bloc: ^9.0.0
   flutter_bloc: ^9.0.0
   equatable: ^2.0.7
-  go_router: ^14.6.3
+  go_router: ^14.7.1
   logging: ^1.3.0
   flutter_launcher_icons: ^0.14.3
   get_it: ^8.0.3
-  sembast: ^3.8.1+1
+  sembast: ^3.8.2
   path_provider: ^2.1.5
   path: ^1.9.0
   encrypt: ^5.0.3
