--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,10 +14,11 @@ dependencies:
   firebase_core: ^3.10.1
   firebase_remote_config: ^5.3.1
   firebase_analytics: ^11.4.1
+  firebase_auth: ^5.4.1
   bloc: ^9.0.0
   flutter_bloc: ^9.0.0
   equatable: ^2.0.7
-  go_router: ^14.7.1
+  go_router: ^14.7.2
   logging: ^1.3.0
   flutter_launcher_icons: ^0.14.3
   get_it: ^8.0.3
