--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,5 @@ app.*.map.json
 /android/app/profile
 /android/app/release
 firepit-log.txt
+lib/firebase_options.dart
+android/app/google-services.json
