--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,11 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Firebase related
 firepit-log.txt
-lib/firebase_options.dart
-android/app/google-services.json
+**/firebase_options.dart
+**/.firebaserc
+**/GoogleService-Info.plist
+**/google-services.json
+**/firebase_app_id_file.json
