--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   path_provider: ^2.1.5
   path: ^1.9.0
   encrypt: ^5.0.3
+  reactive_forms: ^17.0.1
 
 dev_dependencies:
   flutter_test:
