--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,23 +1,20 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-    
         {
-            "name": "playground_flutter",
+            "name": "AppDebug",
             "request": "launch",
-            "type": "dart"
+            "type": "dart",
+            "flutterMode": "debug"
         },
         {
-            "name": "playground_flutter (profile mode)",
+            "name": "AppProfile",
             "request": "launch",
             "type": "dart",
             "flutterMode": "profile"
         },
         {
-            "name": "playground_flutter (release mode)",
+            "name": "AppRelease",
             "request": "launch",
             "type": "dart",
             "flutterMode": "release"
