--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,8 @@ dependencies:
   path_provider: ^2.1.5
   path: ^1.9.0
   encrypt: ^5.0.3
-  reactive_forms: ^17.0.1
+  flutter_form_builder: ^9.7.0
+  form_builder_validators: ^11.1.1
 
 dev_dependencies:
   flutter_test:
