--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,10 +11,10 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  firebase_core: ^3.11.0
-  firebase_remote_config: ^5.4.0
-  firebase_analytics: ^11.4.2
-  firebase_auth: ^5.4.2
+  firebase_core: ^3.12.0
+  firebase_remote_config: ^5.4.1
+  firebase_crashlytics: ^4.3.3
+  firebase_auth: ^5.5.0
   bloc: ^9.0.0
   flutter_bloc: ^9.0.0
   equatable: ^2.0.7
@@ -24,7 +24,7 @@ dependencies:
   path_provider: ^2.1.5
   path: ^1.9.1
   encrypt: ^5.0.3
-  flutter_form_builder: ^9.7.0
+  flutter_form_builder: ^10.0.0
   form_builder_validators: ^11.1.1
 
 dev_dependencies:
