--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
   firebase_crashlytics: ^4.3.4
   firebase_auth: ^5.5.1
   bloc: ^9.0.0
-  flutter_bloc: ^9.0.0
+  flutter_bloc: ^9.1.0
   equatable: ^2.0.7
   go_router: ^14.8.1
   flutter_launcher_icons: ^0.14.3
@@ -26,6 +26,7 @@ dependencies:
   encrypt: ^5.0.3
   flutter_form_builder: ^10.0.0
   form_builder_validators: ^11.1.2
+  collection: ^1.19.1
 
 dev_dependencies:
   flutter_test:
