--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   firebase_remote_config: ^5.4.2
   firebase_crashlytics: ^4.3.4
   firebase_auth: ^5.5.1
+  cloud_firestore: ^5.6.5
   bloc: ^9.0.0
   flutter_bloc: ^9.1.0
   equatable: ^2.0.7
