refactor: update custom button models and remove unused components

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "Encrypter",
         "flutterplayground",
         "Lnsq",
-        "sembast"
+        "sembast",
+        "tekio"
     ]
 }
