--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,11 +11,11 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  firebase_core: ^3.12.1
-  firebase_remote_config: ^5.4.2
-  firebase_crashlytics: ^4.3.4
-  firebase_auth: ^5.5.1
-  cloud_firestore: ^5.6.5
+  firebase_core: ^3.13.0
+  firebase_remote_config: ^5.4.3
+  firebase_crashlytics: ^4.3.5
+  firebase_auth: ^5.5.2
+  cloud_firestore: ^5.6.6
   bloc: ^9.0.0
   flutter_bloc: ^9.1.0
   equatable: ^2.0.7
@@ -25,15 +25,17 @@ dependencies:
   path_provider: ^2.1.5
   path: ^1.9.1
   encrypt: ^5.0.3
-  flutter_form_builder: ^10.0.0
+  flutter_form_builder: ^10.0.1
   form_builder_validators: ^11.1.2
   collection: ^1.19.1
+  tekio:
+    path: ../tekio/
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
-  package_rename: ^1.8.0
+  package_rename: ^1.9.0
 
 flutter:
   uses-material-design: true
