refactor: remove flutter_secure_storage dependency and related plugin registrations

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
     path: ../tekio_forms/
   tekio_menu:
     path: ../tekio_menu/
-  flutter_secure_storage: ^4.2.1
+  # flutter_secure_storage: ^4.2.1
 
 dev_dependencies:
   flutter_test:
