--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,27 +11,24 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  firebase_core: ^3.13.0
-  firebase_remote_config: ^5.4.3
-  firebase_crashlytics: ^4.3.5
-  firebase_auth: ^5.5.3
-  cloud_firestore: ^5.6.7
+  firebase_core: ^3.13.1
+  firebase_remote_config: ^5.4.4
+  firebase_crashlytics: ^4.3.6
+  firebase_auth: ^5.5.4
+  cloud_firestore: ^5.6.8
   bloc: ^9.0.0
-  flutter_bloc: ^9.1.0
+  flutter_bloc: ^9.1.1
   equatable: ^2.0.7
-  go_router: ^15.1.1
+  go_router: ^15.1.2
   flutter_launcher_icons: ^0.14.3
-  sembast: ^3.8.5
+  sembast: ^3.8.5+1
   path_provider: ^2.1.5
   path: ^1.9.1
   encrypt: ^5.0.3
   flutter_form_builder: ^10.0.1
   form_builder_validators: ^11.1.2
   collection: ^1.19.1
-  tekio_forms:
-    path: ../tekio_forms/
-  tekio_menu:
-    path: ../tekio_menu/
+
   # flutter_secure_storage: ^4.2.1
 
 dev_dependencies:
