refactor: rename project from Playground to Tekio and update related configurations

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,10 @@
 {
     "cSpell.words": [
         "Encrypter",
-        "flutterplayground",
         "Lnsq",
         "rashin",
         "sembast",
-        "tekio"
+        "tekio",
+        "tekioappplayground"
     ]
 }
