--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -5,10 +5,10 @@
 // 'flutter create' template.
 
 // The application's name. By default this is also the title of the Flutter window.
-PRODUCT_NAME = Playground
+PRODUCT_NAME = Tekio
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.dev.flutterplayground
+PRODUCT_BUNDLE_IDENTIFIER = tekio.app.playground
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright ©️ 2022 FlutterPlayground. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright ©️ 2022 TekioDev. All rights reserved.
