--- a/package_rename_config.yaml
+++ b/package_rename_config.yaml
@@ -1,32 +1,32 @@
 # https://pub.dev/packages/package_rename
 package_rename_config:
   android:
-    app_name: Playground
-    package_name: com.dev.flutterplayground
+    app_name: Tekio
+    package_name: tekio.app.playground
     # override_old_package: com.example.example
     # lang: kotlin
 
   ios:
-    app_name: Playground
-    bundle_name: playground
-    package_name: com.dev.flutterplayground
+    app_name: Tekio
+    bundle_name: tekio
+    package_name: tekio.app.playground
 
   web:
-    app_name: Playground
-    description: Just my flutter playground
+    app_name: Tekio
+    description: Just my tekio app playground
 
   linux:
-    app_name: Playground
-    package_name: com.dev.flutterplayground
-    exe_name: flutterplayground-dev
+    app_name: Tekio
+    package_name: tekio.app.playground
+    exe_name: tekioappplayground
 
   windows:
-    app_name: Playground
-    organization: FlutterPlayground
-    copyright_notice: Copyright ©️ 2022 FlutterPlayground. All rights reserved.
-    exe_name: flutterplayground-dev
+    app_name: Tekio
+    organization: Tekio Dev
+    copyright_notice: Copyright ©️ 2022 TekioDev. All rights reserved.
+    exe_name: tekioappplayground
 
   macos:
-    app_name: Playground
-    package_name: com.dev.flutterplayground
-    copyright_notice: Copyright ©️ 2022 FlutterPlayground. All rights reserved.
+    app_name: Tekio
+    package_name: tekio.app.playground
+    copyright_notice: Copyright ©️ 2022 TekioDev. All rights reserved.
