--- a/tekio_app/pubspec.yaml
+++ b/tekio_app/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   flutter_form_builder: ^10.0.1
   form_builder_validators: ^11.1.2
   collection: ^1.19.1
+  tekio_menu: ^0.1.4
+  tekio_forms: ^0.1.1
 
   # flutter_secure_storage: ^4.2.1
 
